tests/conditional_type_unsupported/conditional_type_unsupported.exp
Error ----------------------------------------------------------------------------------------------------- test.js:1:29

Conditional types are not yet supported. [unsupported-syntax]

   1| type BasicConditionalType = 1 extends number ? string : number; // error: unsupported
                                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^



Found 1 error
